# Hackathon-2

./: README.md  TROUBLESHOOTING.md  vercel.json
.claude/: settings.local.json
.next/: trace
apps/phase1-cli/: .gitignore  COMMANDS.md  QUICK_REFERENCE.md  README.md  demo.txt  pyproject.toml
apps/phase1-cli/history/prompts/001-phase1-todo-app/: 001-phase1-todo-spec-creation.spec.prompt.md
apps/phase2/: .gitignore  dashboard.html  docker-compose.yml
apps/phase3-todo-app/: .gitignore  README.md  ⚠️-DOCKER-NOT-RUNNING-READ-THIS.txt
apps/phase3-todo-app/backend/: =1.0.0  CLAUDE.md  pyproject.toml  render.yaml  requirements.txt
apps/phase3-todo-app/backend/migrations/: env.py
apps/phase3-todo-app/backend/src/: config.py  database.py  dependencies.py  main.py
apps/phase3-todo-app/backend/src/agent/: __init__.py  prompts.py  runner.py
apps/phase3-todo-app/backend/src/api/: auth.py  chat.py
apps/phase3-todo-app/backend/src/auth/: __init__.py  jwt.py  middleware.py  password.py
apps/phase3-todo-app/backend/src/mcp/: server.py
apps/phase3-todo-app/backend/src/mcp/tools/: add_task.py  delete_task.py  list_tasks.py  update_task.py
apps/phase3-todo-app/backend/src/models/: __init__.py  message.py  task.py  todo.py  user.py
apps/phase4-todo-app/: API_DOCUMENTATION.md  COMPLETE-SUMMARY-AND-COMMANDS.txt  DEPLOYMENT-FIXES.md  HOW_TO_RUN.md  README.md  deploy.bat  docker-compose.yml  package-lock.json  run.bat  verify-deployment.bat  👉-START-HERE-FIRST.txt
apps/phase5-todo-app/: CLAUDE.md  (+15 more)
phase3-todo-app/: .gitignore  CLAUDE.md  QUICK_START.md  start.bat
(+299 files in other folders)
