[project]
name = "phase2-todo-backend"
version = "0.1.0"
description = "FastAPI backend for Phase II Todo Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.24.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
